--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,11 @@
 {
   "short_name": "React App",
   "name": "Create React App Sample",
-  "icons": [
+  "icons": [{
+    "src": "logo192.png",
+    "type": "image/png",
+    "sizes": "192x192"
+  }
   ],
   "start_url": ".",
   "display": "standalone",
